--- a/web/app/Voluntarios/voluntarios.html
+++ b/web/app/Voluntarios/voluntarios.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
   <!-- Site Properities -->
-  <title>ASUPAT</title>
+  <title>ASUPAT | Voluntarios</title>
 
   <link rel="stylesheet" type="text/css" href="../../assets/libs/Semantic-UI-1.12.2/semantic.min.css">
   <link rel="stylesheet" type="text/css" href="../../assets/css/global.css">
@@ -17,9 +17,6 @@
   <script src="../../assets/libs/Semantic-UI-1.12.2/components/form.js/"></script>
   
   <script src="../../assets/js/global.js"></script>
-  
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-  <script src="voluntarios.js"></script>
 
 </head>
 <body id="home">
